WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106653
CC Button doesn't always show up
https://bugs.webkit.org/show_bug.cgi?id=106653
Summary
CC Button doesn't always show up
Victor Carbune
Reported
2013-01-11 04:07:31 PST
Original issue on Chromium bug tracker:
https://code.google.com/p/chromium/issues/detail?id=150897
Attachments
Added extra update for CC button visibility
(7.57 KB, patch)
2013-01-11 04:26 PST
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Modified base class
(7.65 KB, patch)
2013-01-11 13:23 PST
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.64 KB, patch)
2013-01-12 03:42 PST
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Victor Carbune
Comment 1
2013-01-11 04:26:32 PST
Created
attachment 182319
[details]
Added extra update for CC button visibility I think this could actually be in MediaControls::closedCaptionTracksChanged(), but I'm not sure if other ports are affected by the bug
Eric Carlson
Comment 2
2013-01-11 10:17:24 PST
Comment on
attachment 182319
[details]
Added extra update for CC button visibility View in context:
https://bugs.webkit.org/attachment.cgi?id=182319&action=review
> Source/WebCore/html/shadow/MediaControlsChromium.cpp:231 > +void MediaControlsChromium::closedCaptionTracksChanged() > +{ > + if (!m_toggleClosedCaptionsButton) > + return; > + > + if (m_mediaController->hasClosedCaptions()) > + m_toggleClosedCaptionsButton->show(); > + else > + m_toggleClosedCaptionsButton->hide(); > +}
This seems like the correct default behavior, so I think it belongs in the base class. Any port that does not want this behavior can override and not call the base method.
Victor Carbune
Comment 3
2013-01-11 13:23:41 PST
Created
attachment 182405
[details]
Modified base class
Eric Carlson
Comment 4
2013-01-11 13:28:15 PST
Comment on
attachment 182405
[details]
Modified base class Thank you Victor!
WebKit Review Bot
Comment 5
2013-01-11 17:25:24 PST
Comment on
attachment 182405
[details]
Modified base class
Attachment 182405
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15822105
New failing tests: fast/text/international/hindi-spacing.html
Silvia Pfeiffer
Comment 6
2013-01-11 17:36:04 PST
> LayoutTests/media/video-controls-captions.html:48 > + consoleWrite("** Caption button should not be visible as there are no captions track.");
Nit: English grammar correction "as there are no caption tracks" Thanks for moving this to the base class! I think we should do as much as possible there and leave ports to override it if they disagree (as Eric says).
Victor Carbune
Comment 7
2013-01-12 03:42:34 PST
Created
attachment 182466
[details]
Patch for landing
WebKit Review Bot
Comment 8
2013-01-12 04:06:19 PST
Comment on
attachment 182466
[details]
Patch for landing Clearing flags on attachment: 182466 Committed
r139547
: <
http://trac.webkit.org/changeset/139547
>
WebKit Review Bot
Comment 9
2013-01-12 04:06:24 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 10
2013-01-13 04:06:18 PST
Some of the new checks appear to fail on EFL port. I'm not sure why yet: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/media/video-controls-captions-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/media/video-controls-captions-actual.txt @@ -25,8 +25,8 @@ ** Remove DOM node representing the track element ** ** Caption button should not be visible as there are no caption tracks. -EXPECTED (captionsButtonCoordinates[0] <= '0') OK -EXPECTED (captionsButtonCoordinates[1] <= '0') OK +EXPECTED (captionsButtonCoordinates[0] <= '0'), OBSERVED '330' FAIL +EXPECTED (captionsButtonCoordinates[1] <= '0'), OBSERVED '328' FAIL ** Add a text track through JS to the video element **
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug