CC Button doesn't always show up https://bugs.webkit.org/show_bug.cgi?id=106653

Reviewed by Eric Carlson.

Source/WebCore:

Added extra checks to existing test.

* html/shadow/MediaControls.cpp:
(WebCore::MediaControls::closedCaptionTracksChanged):
Enforced visibility of captions button whenever the track list changes.
(WebCore):
* html/shadow/MediaControls.h:
(MediaControls):

LayoutTests:

* media/video-controls-captions-expected.txt: Updated.
* media/video-controls-captions.html: Added extra checks that fail
without the code changes.


Canonical link: https://commits.webkit.org/124961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139547 268f45cc-cd09-0410-ab3c-d52691b4dbfc